src/test/ui/inline-const/no-fallback.stderr
error[E0282]: type annotations needed
  --> $DIR/no-fallback.rs:7:26
   |
LL |     let _: usize = const { 0 };
   |                          ^^^^^ cannot infer type for type `{integer}`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0282`.
